# codecrafters-redis-rust

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
local/: tests.json
src/: config.rs  error.rs  main.rs  response.rs  state.rs  util.rs
src/commands/: mod.rs  repl.rs  stream.rs
src/encoding/: error.rs  mod.rs  rdb.rs
src/encoding/resp2/: de.rs  mod.rs  ser.rs
src/engine/: mod.rs  redis.rs  wait.rs
src/network/: connection.rs  mod.rs  transport.rs
src/replication/: master.rs  mod.rs  replica.rs
src/request/: extension.rs  flag.rs  mod.rs
src/routing/: handler.rs  mod.rs  route.rs
src/storage/: memory.rs  mod.rs  persisted.rs
src/value/: mod.rs  stream.rs
