# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
eyre = "0.6.12"
stable-eyre = "0.2.2"                                 # error handling
bytes = { version = "1.6.0", features = ["serde"] }                                 # helps manage buffers
thiserror = "1.0"                                # error handling
tokio = { version = "1.37", features = ["full"] } # async networking
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
nom = "7.1.3"                                       # parser combinators
itertools = "0.12.1"
strum = { version = "0.26", features = ["derive"] }
derive_more = "0.99.17"
serde = { version = "1.0.197", features = ["derive"] }
parking_lot = "0.12.1"
tower = { version = "0.4.13", features = ["full"] }
pin-project-lite = "0.2.14"
async-trait = "0.1.79"
serde_bytes = "0.11.14"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
hex = "0.4.3"
async-stream = "0.3.5"
